show timestamp in post and comments

--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -5,6 +5,7 @@
     {% else %}
     <title>Welcome to Fire Forums</title>
     {% endif %}
+    <script src="/static/js/moment.min.js"></script>
   </head>
   <body>
     <div>Fire Forums:
