--- a/app/templates/post.html
+++ b/app/templates/post.html
@@ -9,6 +9,9 @@
         	<p><strong>{{ post.title }}</strong><br>
         	<a href="{{ url_for('comments', title=post.title) }}">Comments</a>
         	</p>
+        	{% if post.author.id == g.user.id %}
+			<div><a href="{{ url_for('delete_post', id=post.id) }}">{{ ('Delete') }}</a></div>
+			{% endif %}
         </td>
 
     </tr>
