--- a/app/templates/comment.html
+++ b/app/templates/comment.html
@@ -8,6 +8,9 @@
         	</p> 
         	<p><strong>{{ comment.body }}</strong>
         	</p>
+        	{% if comment.owner.id == g.user.id %}
+			<div><a href="{{ url_for('delete_comment', id=comment.id) }}">{{ ('Delete') }}</a></div>
+			{% endif %}
         </td>
     </tr>
 </table>
