--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -7,6 +7,7 @@
 		<form action="" method="post" name="post">
       		{{ form.hidden_tag() }}
       	<table>
+          <tr><a href="{{ url_for('new') }}">New</a> | <a href="{{ url_for('hot') }}">Hot</a></tr>
         	<tr>
              	<td>Say something:</td>
               	<td>{{ form.post(size=30, maxlength=140) }}</td>
