--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -4,15 +4,15 @@
 {% block content %}
 
         <h1>Hi, {{ g.user.nickname }}!</h1>
-		<form action="" method="post" name="post">
-      		{{ form.hidden_tag() }}
+		<form action="{{ url_for('index') }}" method="post" name="post">
+      		{{ pform.hidden_tag() }}
       	<table>
           <tr><a href="{{ url_for('new') }}">New</a> | <a href="{{ url_for('hot') }}">Hot</a></tr>
         	<tr>
              	<td>Say something:</td>
-              	<td>{{ form.post(size=30, maxlength=140) }}</td>
+              	<td>{{ pform.post(size=30, maxlength=140) }}</td>
               	<td>
-              	{% for error in form.post.errors %}
+              	{% for error in pform.post.errors %}
               	<span style="color: red;">[{{ error }}]</span><br>
               	{% endfor %}
               	</td>
