--- a/app/templates/post.html
+++ b/app/templates/post.html
@@ -35,8 +35,8 @@
         	</p>
         	{% if post.author.id == g.user.id %}
 			<div><a href="{{ url_for('delete_post', id=post.id) }}">{{ ('Delete') }}</a></div>
-            <div id="link"><a href="javascript:unhide('about', 'link')" class="button">{{ ('Edit') }}</a></div>
-            <div id="about" class="hidden">
+            <div id="link"><a href="javascript:unhide('{{ post.id }}', 'link')" class="button">{{ ('Edit') }}</a></div>
+            <div id="{{ post.id }}" class="hidden">
                 <form action="{{ url_for('edit_post', id=post.id) }}" method="post" name="edit">
                     {{ eform.hidden_tag() }}
                     <table>
@@ -50,7 +50,7 @@
                     </tr>
                     <tr>
                     
-                    <td><input type="submit" value="Save Changes"><input type="button" onclick="unhide('link', 'about') " value="Cancel"></td>
+                    <td><input type="submit" value="Save Changes"><input type="button" onclick="unhide('link', '{{ post.id }}') " value="Cancel"></td>
                     <td></td>
                     </tr>
                     </table>
