--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -18,11 +18,12 @@
     <hr>
     {% with messages = get_flashed_messages() %}
     {% if messages %}
-    <ul>
-    {% for message in messages %}
-        <li>{{ message }} </li>
-    {% endfor %}
-    </ul>
+   <script>
+      var messages = {{ messages | safe }};
+      for (var i=0; i<messages.length; i++) {
+        alert(messages[i]);
+      }
+    </script>
     {% endif %}
     {% endwith %}
     {% block content %}{% endblock %}
