--- a/app/templates/post.html
+++ b/app/templates/post.html
@@ -16,7 +16,10 @@
         	<a href="{{ url_for('comments', title=post.title) }}">Comments</a>
         	</p>
         	{% if post.author.id == g.user.id %}
-			<div><a href="{{ url_for('delete_post', id=post.id) }}">{{ ('Delete') }}</a></div>
+            
+			<div><form method="post" action="{{ url_for('delete_post', id=post.id) }}">
+            <button type="submit">Delete</button>
+            </form></div>
 			{% endif %}
         </td>
 
