--- a/app/templates/login.html
+++ b/app/templates/login.html
@@ -1,5 +1,5 @@
 {% extends "base.html" %}
-{% block content %}
+{% block page_content %}
         <h1>Please Sign In</h1>
         <p><a href="{{ url_for('oauth_authorize', provider='facebook') }}">Login with Facebook</a></p>
 {% endblock %}
