--- a/app/templates/post.html
+++ b/app/templates/post.html
@@ -10,7 +10,7 @@
         	<a href="{{url_for('user', nickname=post.author.nickname)}}">{{ post.author.nickname }}</a>
         </td>
         <td>
-        	<p>{{ momentjs(post.date_created).fromNow() }}:
+        	<p>{{ moment(post.date_created).fromNow() }}:
         	</p> 
         	<p><strong>{{ post.title }}</strong><br>
         	<a href="{{ url_for('comments', title=post.title) }}">Comments</a>
@@ -47,3 +47,4 @@
 
     </tr>
 </table>
+
